kubernetes/apps/default/it_tools.yaml
apiVersion: v1
kind: Service
metadata:
  name: ittools
  namespace: default
spec:
  selector:
    name: ittools
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ittools
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ittools
  template:
    metadata:
      labels:
        name: ittools
    spec:
      containers:
        - name: ittools
          image: corentinth/it-tools:latest
          ports:
            - containerPort: 80
