kubernetes/apps/default/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - secretName: wildcard.home.adityathebe.com
      hosts:
        - actual.home.adityathebe.com
        - mealie.home.adityathebe.com
  rules:
    - host: actual.home.adityathebe.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: actualbudget
                port:
                  number: 5006
    - host: mealie.home.adityathebe.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mealie
                port:
                  number: 9000
